2009-01-29  Karl Berry  <karl@gnu.org>

        Update and/or add copyright notices:
        * ABOUT-NLS
        * AUTHORS
        * ChangeLog
        * Makefile.am
        * NEWS
        * README
        * README-alpha
        * README.DOS
        * THANKS
        * autogen.sh
        * configure.ac.in
        * bootstrap/Makefile.am
        * bootstrap/Makefile.try
        * bootstrap/README
        * doc/Makefile.am
        * doc/grep.texi
        * lib/Makefile.am
        * m4/Makefile.am
        * po/POTFILES.in
        * src/Makefile.am
        * src/dfa.h
        * src/dosbuf.c
        * src/grep.h
        * src/kwset.c
        * src/kwset.h
        * src/mbsupport.h
        * src/search.c
        * src/system.h
        * src/vms_fab.c
        * src/vms_fab.h
        * tests/Makefile.am
        * tests/backref.sh
        * tests/bre.awk
        * tests/bre.sh
        * tests/empty.sh
        * tests/ere.awk
        * tests/ere.sh
        * tests/file.sh
        * tests/fmbtest.sh
        * tests/foad1.sh
        * tests/khadafy.sh
        * tests/options.sh
        * tests/pcre.sh
        * tests/spencer1.awk
        * tests/spencer1.sh
        * tests/spencer2.sh
        * tests/status.sh
        * tests/tests
        * tests/warning.sh
        * tests/yesno.sh
                * vms/Makefile.am
        * vms/config_vms.h

        * po/ChangeLog: remove this file, just a bit of ancient cruft.

2009-01-25  Tony Abou-Assaleh <taa@acm.org>

        * README: updated "KNOWN BUGS" section

2009-01-24  Bruno Haible  <bruno@clisp.org>

        * lib/posix/regex.h (__restrict, __restrict_arr): Remove macros.
          (_Restrict_, _Restrict_arr_): New macros. From gnulib/lib/regex.h.
          (regcomp, regexec): Update declarations to use them.

        * lib/savedir.c (isdir): New declaration.

        * src/dfa.c (update_mb_len_index): Change argument type to
          'char const *'.
          (match_mb_charset): Cast argument to strncpy.